--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>서울시 재난 현황</title>
+    <title>SAVY for your safety</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
